--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>test.parameta.commons</artifactId>
 	<version>0.0.20</version>
 	<name>commons</name>
-	<description>Librería para la prueba tecnica</description>
+	<description>Librería para la prueba técnica</description>
 	<distributionManagement>
 		<repository>
 			<id>github</id>
