--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,57 @@
-HELP.md
+#  GENERIC / OS FILES
+.DS_Store
+Thumbs.db
+
+#  ENVIRONMENT FILES
+.env
+
+#  MAVEN / GRADLE BUILDS
 target/
-.mvn/wrapper/maven-wrapper.jar
+build/
+out/
+
+# Keep target inside src (if any)
 !**/src/main/**/target/
 !**/src/test/**/target/
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### VS Code ###
+#  MAVEN WRAPPER
+.mvn/wrapper/maven-wrapper.jar
+
+#  INTELLIJ IDEA
+.idea/
+*.iml
+*.ipr
+*.iws
+
+.idea_modules/
+out/
+.classpath
+.project
+
+#  STS / ECLIPSE
+.apt_generated/
+.factorypath/
+.settings/
+.springBeans/
+.sts4-cache/
+
+#  NETBEANS
+nbproject/private/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+
+#  VS CODE
 .vscode/
+
+#  LOG FILES
+logs/
+*.log
+
+#  TEMP FILES
+*.tmp
+*.swp
+*.swo
