--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
 		<version>4.0.0</version>
 		<relativePath/>
 	</parent>
-	<groupId>com.project</groupId>
-	<artifactId>test.parameta.commons</artifactId>
-	<version>0.0.36</version>
+	<groupId>co.parameta</groupId>
+	<artifactId>technical.test.commons</artifactId>
+	<version>0.0.37</version>
 	<name>commons</name>
 	<description>Librería para la prueba técnica</description>
 	<distributionManagement>
