--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>co.parameta</groupId>
 	<artifactId>technical.test.commons</artifactId>
-	<version>0.0.51</version>
+	<version>0.0.52</version>
 	<name>commons</name>
 	<description>Librería para la prueba técnica</description>
 	<distributionManagement>
@@ -57,8 +57,22 @@
 		<jackson.version>2.18.0-rc1</jackson.version>
 		<org.mapstruct.version>1.6.3</org.mapstruct.version>
 	</properties>
-
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>software.amazon.awssdk</groupId>
+				<artifactId>bom</artifactId>
+				<version>2.40.8</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<dependencies>
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>s3</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
